src/theme.scss
/* ... */
.youlag-theater-modal-container {
  width: 100%;
}

.youlag-theater-modal-content {
  width: 100%;
}

.youlag-video-header {
  display: flex;
  gap: var(--yl-m-3xs);
  position: sticky;
  top: 0;
  left: 0;
  z-index: 1;
  display: flex;
  justify-content: flex-end;
  padding: var(--yl-p-xs);
  background: linear-gradient(to bottom, black 0%, transparent 100%);
}

#youlagVideoSource {
  margin-right: auto;
  border-radius: 12px;
  padding-right: var(--yl-p-sm);
  padding-left: var(--yl-p-sm);
}

.youlag-video-container {
  position: relative;
  max-height: 80vh;
  overflow: hidden;

  .youlag-iframe-container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
  
    .youlag-iframe {
      width: 100%;
      height: auto;
      max-height: 80vh;
      aspect-ratio: 16 / 9;
      overflow: hidden;
    }  
  }
  
  .youlag-thumbnail-container {
    width: 100%;
    height: 0;
    /* Use this method of setting 16:9 aspect ratio, due to a subpixel peaking below the iframe that sits on top. */
    padding-bottom: calc(56.25% - 1px); 
    position: relative;
    overflow: hidden;
    animation: pulse 4s infinite ease-in-out;
  
    .youlag-video-thumbnail {
      position: absolute;
      top: 50%;
      left: 0;
      width: 100%;
      transform: translateY(-50%);
    }
  }
}

.yl-video-blur-backdrop-effect {
  --yl-effect: 60px;
@supports (-webkit-hyphens: auto) and ((-webkit-line-clamp: unset)) {
    /* SAFARI HACK: Prevent premature clipping of blur caused by CJK character titles on `youlag-video-metadata-title` by increasing the blur effect size. */
    --yl-effect: 100px;
  } 

  position: absolute;
  left: 0;
  z-index: -1;

  &__image {
    width: 100vw;
    max-height: var(--yl-effect);
    object-fit: cover;
    object-position: center;
    filter: blur(var(--yl-effect));
    transform: translateY(calc(var(--yl-effect) / -2));
    opacity: 0.5;
  }
}
/* ... */

